modified swagger settings
