# src/Routes/messages.ts
@@ -5,15 +5,16 @@ import { User } from "../Entities/user";
 
 const router = Router();
 
-/*
+  
+router.post("/", async (req, res) => {
+  try {
+    /*
     #swagger.tags = ['Messages']
     #swagger.summary = 'Post a new message'
     #swagger.parameters['id', 'body', 'conversation'] = {
       in: 'body',
     }
     */
-router.post("/", async (req, res) => {
-  try {
     const { id, body, conversation } = req.body;
     const currentUser = await User.findOne({ where: { id } });
     const message = Message.create({ body, user: currentUser!, conversation });
@@ -24,12 +25,13 @@ router.post("/", async (req, res) => {
   }
 });
 
-/*
+  
+router.get("/all", async (req, res) => {
+  try {
+    /*
     #swagger.tags = ['Messages']
     #swagger.summary = 'Get all messages'
     */
-router.get("/all", async (req, res) => {
-  try {
     const messages = await Message.find({
       where: { conversation: { id: 0 } },
       relations: { user: true },
@@ -40,11 +42,11 @@ router.get("/all", async (req, res) => {
   }
 });
 
-/*
-    #swagger.tags = ['Messages']
-    */
 router.post("/usermessages", middleware2, (req, res) => {
   try {
+    /*
+    #swagger.tags = ['Messages']
+    */
     res.send(req.body.user.messages);
   } catch (error) {
     res.status(500).send(error);
